enum CellState {
    DEAD = 0;
    ALIVE = 1;
}

message BoardState {
  message RowState {
    repeated CellState cellStates = 1;
  }
  repeated RowState rowStates = 1;
}